Добавлено автоматическое сохранение данных формы при выходе

--- a/src/ExternalDataProcessors/GetManHTTP_v_1_0_19/Forms/Форма/Form.form
+++ b/src/ExternalDataProcessors/GetManHTTP_v_1_0_19/Forms/Форма/Form.form
@@ -1858,6 +1858,19 @@
     <horizontalAlign>Left</horizontalAlign>
     <autoFill>true</autoFill>
   </autoCommandBar>
+  <handlers>
+    <event>OnOpen</event>
+    <name>ПриОткрытии</name>
+  </handlers>
+  <handlers>
+    <event>OnCreateAtServer</event>
+    <name>ПриСозданииНаСервере</name>
+  </handlers>
+  <handlers>
+    <event>OnClose</event>
+    <name>ПриЗакрытии</name>
+  </handlers>
+  <autoSaveDataInSettings>Use</autoSaveDataInSettings>
   <saveWindowSettings>true</saveWindowSettings>
   <autoTitle>true</autoTitle>
   <autoUrl>true</autoUrl>
@@ -1871,7 +1884,7 @@
     <name>Объект</name>
     <id>1</id>
     <valueType>
-      <types>ExternalDataProcessor.GetManHTTP_v_1_0_18</types>
+      <types>ExternalDataProcessor.GetManHTTP_v_1_0_19</types>
     </valueType>
     <view>
       <common>true</common>
